syntax = "proto3";

package cache;

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

service Cache {
  rpc GetAllCacheSet(google.protobuf.Empty) returns (GetAllCacheSetResponse) {}
  rpc Get(CacheGetRequest) returns (CacheGetResponse) {}
  rpc Set(CacheSetRequest) returns (CacheSetResponse) {}
  rpc Delete(CacheDeleteRequest) returns (CacheDeleteResponse) {}
}

// Get All Cache Set
message GetAllCacheSetResponse {
  int32 length = 1;
}

// Delete
message CacheDeleteRequest {
  string key = 1;
}

message CacheDeleteResponse {
  bool success = 1;
  google.protobuf.Any value = 2;
}

// Set
message CacheSetRequest {
  string key = 1;
  google.protobuf.Any value = 2;
}

message CacheSetResponse {
  bool success = 1;
}

// Get
message CacheGetRequest {
  string key = 1;
}

message CacheGetResponse {
  google.protobuf.Any value = 1;
}